crates/tych/src/tests/snapshots/binop_complex.snap
---
source: crates/tych/src/tests.rs
assertion_line: 153
expression: "(test[1], res)"
---
- "\nfn foo() {\n    let a: int = 1\n    a + 2 / 4 + (2 * 2)\n}\n"
- Ok:
    nodes:
      - kind:
          Fn:
            proto:
              name: foo
              args: []
              ret_ty: Void
              is_extern: false
              module: main
            body:
              kind:
                Block:
                  list:
                    - kind:
                        Let:
                          name: a
                          antn: Int32
                          init:
                            kind:
                              Lit:
                                value:
                                  Int32: 1
                                ty: Int32
                    - kind:
                        BinOp:
                          op: Add
                          lhs:
                            kind:
                              BinOp:
                                op: Add
                                lhs:
                                  kind:
                                    Ident:
                                      name: a
                                      ty: Int32
                                rhs:
                                  kind:
                                    BinOp:
                                      op: Div
                                      lhs:
                                        kind:
                                          Lit:
                                            value:
                                              Int32: 2
                                            ty: Int32
                                      rhs:
                                        kind:
                                          Lit:
                                            value:
                                              Int32: 4
                                            ty: Int32
                                      ty: Int32
                                ty: Int32
                          rhs:
                            kind:
                              BinOp:
                                op: Mul
                                lhs:
                                  kind:
                                    Lit:
                                      value:
                                        Int32: 2
                                      ty: Int32
                                rhs:
                                  kind:
                                    Lit:
                                      value:
                                        Int32: 2
                                      ty: Int32
                                ty: Int32
                          ty: Int32
                  ty: Int32

