crates/tych/src/tests/snapshots/binop_func_call.snap
---
source: crates/tych/src/tests.rs
assertion_line: 152
expression: "(test[1], res)"
---
- "\nfn plusOne(x: int) -> int {\n    x + 1\n}\n\nfn main() {\n    1 + plusOne(3)\n}\n"
- Ok:
    nodes:
      - kind:
          Fn:
            proto:
              name: plusOne
              args:
                - - x
                  - Int32
              ret_ty: Int32
              is_extern: false
            body:
              kind:
                Block:
                  list:
                    - kind:
                        BinOp:
                          op: Add
                          lhs:
                            kind:
                              Ident:
                                name: x
                                ty: Int32
                          rhs:
                            kind:
                              Lit:
                                value:
                                  Int32: 1
                                ty: Int32
                          ty: Int32
                  ty: Int32
      - kind:
          Fn:
            proto:
              name: main
              args: []
              ret_ty: Void
              is_extern: false
            body:
              kind:
                Block:
                  list:
                    - kind:
                        BinOp:
                          op: Add
                          lhs:
                            kind:
                              Lit:
                                value:
                                  Int32: 1
                                ty: Int32
                          rhs:
                            kind:
                              Call:
                                name: plusOne
                                args:
                                  - kind:
                                      Lit:
                                        value:
                                          Int32: 3
                                        ty: Int32
                                ty: Int32
                          ty: Int32
                  ty: Int32

