crates/tych/src/tests/snapshots/binop_lit_char_1.snap
---
source: crates/tych/src/tests.rs
assertion_line: 152
expression: "(test[1], res)"
---
- "\nfn main(x: int) {\n    'a' > 'c'\n}\n"
- Ok:
    nodes:
      - kind:
          Fn:
            proto:
              name: main
              args:
                - - x
                  - Int32
              ret_ty: Void
              is_extern: false
              module: main
              member_of: ~
            body:
              kind:
                Block:
                  list:
                    - kind:
                        BinOp:
                          op: Gt
                          lhs:
                            kind:
                              Lit:
                                value:
                                  Char: 97
                                ty: Char
                          rhs:
                            kind:
                              Lit:
                                value:
                                  Char: 99
                                ty: Char
                          ty: Bool
                  ty: Bool

