crates/tych/src/tests/snapshots/binop_lit_char_2.snap
---
source: crates/tych/src/tests.rs
assertion_line: 153
expression: "(test[1], res)"
---
- "\nfn main(x: char) {\n    x > 'c'\n}\n"
- Ok:
    nodes:
      - kind:
          Fn:
            proto:
              name: main
              args:
                - - x
                  - Char
              ret_ty: Void
              is_extern: false
              module: main
            body:
              kind:
                Block:
                  list:
                    - kind:
                        BinOp:
                          op: Gt
                          lhs:
                            kind:
                              Ident:
                                name: x
                                ty: Char
                          rhs:
                            kind:
                              Lit:
                                value:
                                  Char: 99
                                ty: Char
                          ty: Bool
                  ty: Bool

