crates/tych/src/tests/snapshots/block_let.snap
---
source: crates/tych/src/tests.rs
assertion_line: 186
expression: "(test[1], res)"
---
- "\nlet x: int = {\n    1\n}\n"
- Ok:
    nodes:
      - kind:
          Let:
            name: x
            antn: Int32
            init:
              kind:
                Block:
                  list:
                    - kind:
                        Lit:
                          value:
                            Int32: 1
                          ty: Int32
                  ty: Int32

