crates/tych/src/tests/snapshots/block_let_mismatch_1.snap
---
source: crates/tych/src/tests.rs
assertion_line: 186
expression: "(test[1], res)"
---
- "\nlet x: int = {\n    1.0\n}\n"
- Err: "Types don't match in let statement. `x` annotated with `int32` but initial value is `float`"

