crates/tych/src/tests/snapshots/call_mismatch_arg_num.snap
---
source: crates/tych/src/tests.rs
assertion_line: 238
expression: "(test[1], res)"
---
- "\nfn plusOne(x: int) -> int {\n    x + 1\n}\nfn main() {\n    plusOne(1, 2)\n}\n"
- Err: "Call to `plusOne()` takes 1 args and 2 were given"

